WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175178
EventSource: ignore IDs with U+0000
https://bugs.webkit.org/show_bug.cgi?id=175178
Summary
EventSource: ignore IDs with U+0000
Anne van Kesteren
Reported
2017-08-04 01:02:05 PDT
Change to standard:
https://github.com/whatwg/html/pull/2849
Proposed tests (still need review):
https://github.com/w3c/web-platform-tests/pull/6584
It seems good to fix this as this is the only way for someone to smuggle a U+0000 into a header value.
Attachments
WIP Patch
(943 bytes, patch)
2017-08-14 16:34 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(4.44 KB, patch)
2017-08-15 09:36 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(6.47 KB, patch)
2017-08-16 09:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-08-14 16:34:12 PDT
Created
attachment 318082
[details]
WIP Patch
Chris Dumez
Comment 2
2017-08-15 09:36:08 PDT
Created
attachment 318125
[details]
WIP Patch WPT fails for some reason. I am not sure why so I asked for clarification upstream.
Chris Dumez
Comment 3
2017-08-16 09:12:03 PDT
Created
attachment 318264
[details]
Patch
WebKit Commit Bot
Comment 4
2017-08-16 10:30:42 PDT
Comment on
attachment 318264
[details]
Patch Clearing flags on attachment: 318264 Committed
r220799
: <
http://trac.webkit.org/changeset/220799
>
WebKit Commit Bot
Comment 5
2017-08-16 10:30:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-08-16 10:31:50 PDT
<
rdar://problem/33921417
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug