EventSource: ignore IDs with U+0000 https://bugs.webkit.org/show_bug.cgi?id=175178

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Import WPT test coverage from:
- https://github.com/w3c/web-platform-tests/pull/6584

* web-platform-tests/eventsource/format-field-id-null-expected.txt: Added.
* web-platform-tests/eventsource/format-field-id-null.htm: Added.
* web-platform-tests/eventsource/resources/last-event-id.py:
(main):
* web-platform-tests/eventsource/w3c-import.log:

Source/WebCore:

EventSource: ignore IDs with U+0000 as per:
https://github.com/whatwg/html/pull/2849

Test: imported/w3c/web-platform-tests/eventsource/format-field-id-null.htm

* page/EventSource.cpp:
(WebCore::EventSource::parseEventStreamLine):


Canonical link: https://commits.webkit.org/192299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220799 268f45cc-cd09-0410-ab3c-d52691b4dbfc