LayoutTests/imported/w3c/web-platform-tests/eventsource/resources/last-event-id.py
@@ -3,9 +3,10 @@
 def main(request, response):
   response.headers.set("Content-Type", "text/event-stream")
   last_event_id = request.headers.get('Last-Event-ID', None)
+  value = request.GET.first("idvalue", "…")
 
   if(last_event_id):
       return "data: " + last_event_id + "\n\n"
   else:
-    return "id: …\nretry: 200\ndata: hello\n\n"
+    return "id: " + value + "\nretry: 200\ndata: hello\n\n"
 
